Getting events from CalDAV directory (code not cleaned yet)

--- a/src/main/resources/MessageBundle_de.properties
+++ b/src/main/resources/MessageBundle_de.properties
@@ -5,3 +5,6 @@ hier sind die Terminerinnerungen des Reminders {0}.\n\
 Es folgen die Kalendereintr\u00e4ge der n\u00e4chsten {1,number,integer} Tage, gesammelt von den\n\
 Kalendern {2}:\n\n
 email.body.greeting = \nWir sehen uns ...\n
+email.body.signature = \n--\n\
+Dies ist der Dienst {0} ({1}),\n\
+ein Service von {2}.\n
