Create the email signature with properties from the maven project

--- a/src/main/resources/MessageBundle_de.properties
+++ b/src/main/resources/MessageBundle_de.properties
@@ -6,5 +6,5 @@ Es folgen die Kalendereintr\u00e4ge der n\u00e4chsten {1,number,integer} Tage, g
 Kalendern {2}:\n\n
 email.body.greeting = \nWir sehen uns ...\n
 email.body.signature = \n--\n\
-Dies ist der Dienst {0} ({1}),\n\
-ein Service von {2}.\n
+Dies ist der Dienst {0} (Version {1})\n[{2}],\n\
+ein Service von ''{3}'' [{4}].\n
