documentation structure and architecture document

--- a/src/docs/asciidoc/design.adoc
+++ b/src/docs/asciidoc/design.adoc
@@ -1,13 +1,9 @@
-= Design of CalendarMail
-:name: Sven Bauhan
-:email: sde@sven.bauhan.name
-:doctype: book
-:encoding: utf-8
-:revnumber: 0.1.1
-:lang: en
-:toc: left
-:numbered:
+// configure EN settings for asciidoc
+include::_config.adoc[]
 
+= Design of CalendarMail
+
+This document describes the software design of <<index.adoc#,project CalendarMail>>.
 
 == Class structure
 
